--- a/src/views/Images/Image.css
+++ b/src/views/Images/Image.css
@@ -1,43 +1,42 @@
 /* 目录显示位置为最左边一列,超出上下边界时显示滚动条 */
-.file-list {
+.i-file-list {
     position: sticky;
     top: 0;
     left: 0;
-    width: 20%;
+    width: 150px;
     height: 100%;
     overflow-y: auto;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 /* 目录项 */
-.file-item {
+.i-file-item {
     cursor: pointer;
+    width: 60%;
     padding: 10px;
     border-bottom: 1px solid #ccc;
 }
 
-/* 选中项 */
-.file-item.active {
-    background-color: #f5f5f5;
-}
-
 /* Markdown内容,使用相对位置,在超出上下边界时显示滚动条 */
-.markdown-content {
+.i-markdown-content {
     position: absolute;
-    top: 10%;
-    left: 20%;
-    width: 80%;
-    height: 85%;
+    top: 70px;
+    left: 100px;
+    right: 10px;
+    width: 100%-100px;
+    height: 90%;
     overflow-y: auto;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
 }
 
 /* 加载中 */
-.loading {
+.i-loading {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 24px;
-    color: #999;
+    font-size: 48px;
+    color: #333;
 }
