--- a/src/views/Images/Image.css
+++ b/src/views/Images/Image.css
@@ -1,10 +1,11 @@
 /* 目录显示位置为最左边一列,超出上下边界时显示滚动条 */
 .i-file-list {
-    position: sticky;
-    top: 0;
+    position: absolute;
+    top: 80px;
+    bottom: 0;
     left: 0;
-    width: 150px;
-    height: 100%;
+    height: 85vh;
+    width: 200px;
     overflow-y: auto;
     -webkit-user-select: none;
     user-select: none;
